# flightscope-to-csv

./: .gitignore  2022-10-29T23:58:48-07:00.csv  pyproject.toml  scraper.py
