[tool.poetry]
name = "foresight-scraper"
version = "0.1.0"
description = "A scraper for myforesight.com data"
authors = ["Ryan Chan <ryan@ryanlchan.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
bs4 = "^0.0.1"
cloudscraper = "^1.2.64"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
