[tool.poetry]
name = "flightscope-scraper"
version = "0.1.0"
description = "A scraper for myflightscope.com data"
authors = ["Ryan Chan <ryan@ryanlchan.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cloudscraper = "^1.2.64"
untangle = "^1.2.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
