[tool.poetry]
name = "flightscope-to-csv"
version = "0.1.0"
description = "Turn your myflightscope.com data into a CSV"
authors = ["Ryan Chan <ryan@ryanlchan.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cloudscraper = "^1.2.64"
untangle = "^1.2.1"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
